--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:postgresql://postgres-data:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:postgresql://elibrary-postgres-data:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -7,19 +7,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # = JPA / HIBERNATE
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
-
-# = LOGGING
-debug=false
-logging.level.root=info
-logging.file.path=logs/
-logging.file.name=${logging.file.path}elib
-logging.logback.rollingpolicy.file-name-pattern=${logging.file.name}.%d{yyyy-MM-dd}.%i.log
-logging.logback.rollingpolicy.max-file-size=5MB
-logging.logback.rollingpolicy.max-history=3
-logging.logback.rollingpolicy.total-size-cap=100MB
 
 # = LIQUIBASE
 spring.liquibase.enabled=true
@@ -30,13 +21,6 @@ spring.liquibase.default-schema=public
 spring.liquibase.url=${spring.datasource.url}
 spring.liquibase.user=${spring.datasource.username}
 spring.liquibase.password=${spring.datasource.password}
-
-# = MVC
-spring.mvc.format.date=yyyy-MM-dd
-spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
-spring.mvc.format.time=HH:mm:ss
-
-server.port=8080
 
 # = FACEBOOK
 spring.security.oauth2.client.registration.facebook.client-id=220515239881245
