--- a/elibrary-main/src/main/resources/server.properties
+++ b/elibrary-main/src/main/resources/server.properties
@@ -1,4 +1,4 @@
 ## = TOMCAT
 tomcat.port=8085
-tomcat.web.content.folder.path=src/main/webapp/
-tomcat.web.base.folder.path=target/
+tomcat.web.content.folder.path=.
+tomcat.web.base.folder.path=.
