--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <org.springframework.version>5.2.15.RELEASE</org.springframework.version>
         <org.springframework.security.version>5.3.9.RELEASE</org.springframework.security.version>
-        <tomcat.version>9.0.48</tomcat.version>
+        <tomcat.version>8.5.2</tomcat.version>
     </properties>
 
     <dependencies>
@@ -152,7 +152,7 @@
                 <version>2.3.9.RELEASE</version>
             </dependency>
 
-            <!-- Tomcat -->
+            <!-- Embedded Tomcat -->
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
@@ -160,17 +160,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-jasper</artifactId>
-                <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.tomcat</groupId>
-                <artifactId>tomcat-jasper</artifactId>
-                <version>${tomcat.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.tomcat</groupId>
-                <artifactId>tomcat-jasper-el</artifactId>
+                <artifactId>tomcat-embed-logging-log4j</artifactId>
                 <version>${tomcat.version}</version>
             </dependency>
             <dependency>
@@ -396,11 +386,9 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
             </plugin>
         </plugins>
         <pluginManagement>
