Adds JdbcTemplateDao, Hibernate Dao and tests.

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:postgresql://elibrary-postgres-data:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/elibrary?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -11,6 +11,7 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
+spring.jpa.hibernate.enable_lazy_load_no_trans=true
 
 # = LIQUIBASE
 spring.liquibase.enabled=true
