--- a/elibrary-api/pom.xml
+++ b/elibrary-api/pom.xml
@@ -89,6 +89,10 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.vladmihalcea</groupId>
+            <artifactId>hibernate-types-52</artifactId>
+        </dependency>
     </dependencies>
 
     <properties>
