--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <org.springframework.security.version>5.3.9.RELEASE</org.springframework.security.version>
         <tomcat.version>8.5.2</tomcat.version>
         <org.hibernate.version>5.5.3.Final</org.hibernate.version>
+        <io.springfox.swagger2>3.0.0</io.springfox.swagger2>
     </properties>
 
     <dependencies>
@@ -387,6 +388,23 @@
                 <groupId>ch.qos.logback</groupId>
                 <artifactId>logback-classic</artifactId>
                 <version>1.2.3</version>
+            </dependency>
+
+            <!--  SWAGGER  -->
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger2</artifactId>
+                <version>${io.springfox.swagger2}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-swagger-ui</artifactId>
+                <version>${io.springfox.swagger2}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.springfox</groupId>
+                <artifactId>springfox-bean-validators</artifactId>
+                <version>${io.springfox.swagger2}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
