--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -44,7 +44,10 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>2.4.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-jms-log-handler</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
