--- a/elibrary-rest/pom.xml
+++ b/elibrary-rest/pom.xml
@@ -33,6 +33,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
         </dependency>
+        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-jms-sender</artifactId>
+        </dependency>
 
         <!--  SWAGGER  -->
         <dependency>
