--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - SPRING_DATASOURCE_PASSWORD=1234
       - SPRING_JPA_HIBERNATE_DDL_AUTO=none
     ports:
-      - 8080:8080
+      - "8080:8080"
 
   elibrary-mysql-data:
     image: mysql:latest
@@ -23,4 +23,8 @@ services:
       - MYSQL_ROOT_PASSWORD=1234
       - MYSQL_DATABASE=by_it_academy_grodno_elibrary
     ports:
-      - 3306:3306
+      - "3306:3306"
+    healthcheck:
+      test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
+      timeout: 20s
+      retries: 10
