Adds AOP logger around and json file appender

--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # = DATA SOURCE
-spring.datasource.url=jdbc:mysql://mysql-docker-container:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/by_it_academy_grodno_elibrary?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,14 +12,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=true
 
 # = LOGGING
-debug=false
-logging.level.root=info
-logging.file.path=logs/
-logging.file.name=${logging.file.path}elib
-logging.logback.rollingpolicy.file-name-pattern=${logging.file.name}.%d{yyyy-MM-dd}.%i.log
-logging.logback.rollingpolicy.max-file-size=5MB
-logging.logback.rollingpolicy.max-history=3
-logging.logback.rollingpolicy.total-size-cap=100MB
+#debug=false
+#logging.level.root=info
+#logging.file.path=logs/
+#logging.file.name=${logging.file.path}elib
+#logging.logback.rollingpolicy.file-name-pattern=${logging.file.name}.%d{yyyy-MM-dd}.%i.log
+#logging.logback.rollingpolicy.max-file-size=5MB
+#logging.logback.rollingpolicy.max-history=3
+#logging.logback.rollingpolicy.total-size-cap=100MB
 
 # = LIQUIBASE
 spring.liquibase.enabled=true
