--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -28,6 +28,10 @@
         </dependency>
         <dependency>
             <groupId>by.it.academy.grodno.elibrary</groupId>
+            <artifactId>elibrary-logger</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>by.it.academy.grodno.elibrary</groupId>
             <artifactId>elibrary-utils</artifactId>
         </dependency>
         <dependency>
@@ -42,7 +46,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>2.4.2</version>
+            <version>2.5.3</version>
         </dependency>
 
     </dependencies>
