--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,45 @@ version: '3.1'
 
 services:
 
-#  elk:
-#    image: sebp/elk
+#  elasticsearch:
+#    image: docker.elastic.co/elasticsearch/elasticsearch:7.2.0
+#    ports:
+#      - "9200:9200"
+#    environment:
+#      - "discovery.type=single-node"
+#    volumes:
+#      - ./elk/elasticsearch/data:/usr/share/elasticsearch/data:rw              # Persistence data
+#
+#  logstash:
+#    image: docker.elastic.co/logstash/logstash:7.2.0
+#    ports:
+#      - "25826:25826"
+#      - "5044:5044"
+#    volumes:
+#      - ./elk/logstash/pipeline:/usr/share/logstash/pipeline:ro                # Pipeline configuration
+#    restart: on-failure
+#    depends_on:
+#      - elasticsearch
+#
+#  kibana:
+#    image: docker.elastic.co/kibana/kibana:7.2.0
 #    ports:
 #      - "5601:5601"
-#      - "9200:9200"
-#      - "5044:5044"
-
-  elk:
-    image: elibrary-spring-boot-elk:latest
-    build:
-      context: elk
-      dockerfile: Dockerfile
-    ports:
-      - "5601:5601"
-      - "9200:9200"
-      # Ports unused for access from the host so far
-      #- "5044:5044"
-      #- "4560:4560"
+#    restart: on-failure
+#    depends_on:
+#      - elasticsearch
+#
+#  filebeat:
+#    image: docker.elastic.co/beats/filebeat:7.2.0
+#    volumes:
+#      - ./elk/filebeat/filebeat.docker.yml:/usr/share/filebeat/filebeat.yml:ro # Configuration file
+#      - /var/lib/docker/containers:/var/lib/docker/containers:ro               # Docker logs
+#      - /var/run/docker.sock:/var/run/docker.sock:ro                           # Additional information about containers
+#      - ./elk/filebeat/data:/usr/share/filebeat/data:rw                        # Persistence data
+#    user: root                                                                 # Allow access to log files and docker.sock
+#    restart: on-failure
+#    depends_on:
+#      - logstash
 
   elibrary:
     image: elibrary-spring-boot:latest
