--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -1,17 +1,17 @@
 input {
-    tcp {
-        port => 5000
-        codec => json_lines
-    }
+  beats {
+    port => 5044
+  }
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+  mutate {
+    add_tag => [ "logstash_filter_applied" ]
+  }
+}
 
 output {
-    elasticsearch {
-        hosts => "elasticsearch:9200"
-        index => "springboot-elk"
-        user => "elastic"
-        password => "changeme"
-    }
+  elasticsearch {
+    hosts => "elasticsearch:9200"
+  }
 }
