--- a/elibrary-main/src/main/resources/application.properties
+++ b/elibrary-main/src/main/resources/application.properties
@@ -53,6 +53,7 @@ spring.security.oauth2.client.registration.github.scope=user,user:email
 # = ACTUATOR
 management.endpoints.enabled-by-default=true
 management.endpoints.web.exposure.include=*
+management.endpoints.shutdown.enabled=true
 
 ## = MAIL
 spring.mail.send=false
