--- a/elk/logstash/pipeline/logstash.conf
+++ b/elk/logstash/pipeline/logstash.conf
@@ -4,14 +4,19 @@ input {
   }
 }
 
-filter {
-  mutate {
-    add_tag => [ "logstash_filter_applied" ]
-  }
-}
+# filter {
+#   mutate {
+#     add_tag => [ "logstash_filter_applied" ]
+#   }
+# }
+
+## Add your filters / logstash plugins configuration here
 
 output {
-  elasticsearch {
-    hosts => "elasticsearch:9200"
-  }
+	elasticsearch {
+		hosts => "elasticsearch:9200"
+		user => "elastic"
+		password => "changeme"
+		ecs_compatibility => disabled
+	}
 }
