--- a/elibrary-main/pom.xml
+++ b/elibrary-main/pom.xml
@@ -48,7 +48,10 @@
             <artifactId>spring-boot-maven-plugin</artifactId>
             <version>2.5.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
