Adds sonarqube and fixes some issues

--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,12 @@
     </dependencyManagement>
 
     <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -183,7 +189,11 @@
                         </excludes>
                     </configuration>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.7.0.1746</version>
+                </plugin>
                 <!-- Maven plugin for ignore failure test  -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
